# add-msg-issue-suffix-hook

./: .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg
add_msg_issue_suffix_hook/: add_msg_issue_suffix.py
